++++++++++++++++++++++++
Version 0.5-svn:
++++++++++++++++++++++++
2009-03-10:
* Added: basic code for Rich text engine.

2009-03-09:
* Added: using of SVG icons.

2009-03-06:
* Added: scrolling docs with mouse wheel over the tab bar.
* Added: unindention of current line if selection is empty (Sci engine).
* Added: CMake syntax highlighting.

2009-03-04:
* Removed "Print selected lines" menu item. Now it prints selected
  lines if there is a selection or prints the whole text if there isn't.

Initial commit:
* Added: different text engines.
* Added: splittable document view for Scintilla text engine.
* Added: using installed system icon themes.
* Moved to CMake building system.


===============================
Version 0.4.1
===============================
2008-10-17:
* Added: 'Replace' action to main menu
* Added: storing the 'replace to' text

2008-10-15 15:13:37 -0400 (Срд, 15 Окт 2008) | 1 line
* Moved sessions actions from 'File' menu to submenu

2008-10-13:
* Added: selection of EOL mode (Win/Unix/Mac)


=== Branch 0.4 splitted ===

2008-10-13:
* Added: action "Normal size" for text zoom
* Fixed: now we have current file's directory at 'Save as' dialog
* Fixed: bug with repeated replacements if replacing text 
  contains the replaceable one as a substring

2008-09-05:
* Added: zoom in and zoom out (increase and decrease font)
* Added: settings page for autocompletion

2008-08-28:
* Fixed: restoring cursor position after reloading

2008-08-25:
* Added: copying of installed API files to user's dir (if 
  they don't exist yet)

2008-08-24:
* Added: processing of read-only files

2008-08-21:
* Improved: serach using regexps
* Added: more file types to 'Open' dialog

2008-08-19:
* Added: autocompletion from API list (dictionary)

2008-08-06:
* Added: plugins settings

2008-07-24:
* Added: printing of selected lines

2008-07-23:
* Added: highlighting for Batch files
* Added: context menu for document tab

2008-07-14:
* Added: printing

2008-07-10: